Correct center alignment of Getting Started messages

--- a/styles/getting-started/_getting-started-message.scss
+++ b/styles/getting-started/_getting-started-message.scss
@@ -26,7 +26,7 @@
     text-align: right;
   }
   &.alignment-center {
-    text-align: right;
+    text-align: center;
   }
 }
 .getting-started-message-controls {
